Updated code as of 13/10/25 with testing improvements