@@ -1,20 +1,25 @@
 package com.ninjamap.app.service.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import com.ninjamap.app.exception.ForbiddenException;
 import com.ninjamap.app.exception.ResourceNotFoundException;
 import com.ninjamap.app.model.ArticleStats;
 import com.ninjamap.app.model.BlogPost;
 import com.ninjamap.app.model.Comment;
+import com.ninjamap.app.model.User;
 import com.ninjamap.app.payload.request.CommentRequest;
 import com.ninjamap.app.payload.response.ApiResponse;
 import com.ninjamap.app.payload.response.CommentResponse;
+import com.ninjamap.app.payload.response.UserResponse;
 import com.ninjamap.app.repository.IBlogPostRepository;
 import com.ninjamap.app.repository.ICommentRepository;
 import com.ninjamap.app.service.ICommentService;
+import com.ninjamap.app.service.IUserService;
 import com.ninjamap.app.utils.AppUtils;
 import com.ninjamap.app.utils.constants.AppConstants;
 
@@ -24,92 +29,169 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class CommentServiceImpl implements ICommentService {
 
-	private final ICommentRepository commentRepository;
-	private final IBlogPostRepository blogPostRepository;
+    private final ICommentRepository commentRepository;
+    private final IBlogPostRepository blogPostRepository;
+    private final IUserService userService;
 
-	@Override
-	public ResponseEntity<ApiResponse> addComment(String blogPostId, CommentRequest request) {
-		BlogPost blogPost = blogPostRepository.findByIdAndIsDeletedFalse(blogPostId)
-				.orElseThrow(() -> new ResourceNotFoundException(AppConstants.BLOG_POST_NOT_FOUND));
+    @Override
+    public ResponseEntity<ApiResponse> addComment(String blogPostId, CommentRequest request) {
+        BlogPost blogPost = getBlogPost(blogPostId);
+        User currentUser = getCurrentUserEntity();
 
-		Comment comment = Comment.builder().name(request.getName()).email(request.getEmail())
-				.content(request.getContent()).blogPost(blogPost).build();
+        Comment comment = Comment.builder()
+                .content(request.getContent())
+                .blogPost(blogPost)
+                .user(currentUser)
+                .build();
 
-		Comment saved = commentRepository.save(comment);
+        boolean isReply = false;
 
-		ArticleStats stats = blogPost.getStats();
-		if (stats == null) {
-			stats = ArticleStats.builder().views(0).likes(0).comments(1).shares(0).build();
-			blogPost.setStats(stats);
-		} else {
-			stats.setComments(stats.getComments() + 1);
-		}
+        if (request.getParentCommentId() != null && !request.getParentCommentId().isEmpty()) {
+            Comment parent = getComment(request.getParentCommentId());
+            comment.setParentComment(parent);
+            isReply = true;
+        }
 
-		// Save updated stats via blogPost
-		blogPostRepository.save(blogPost);
+        commentRepository.save(comment);
 
-		// Build response
-		ApiResponse response = (saved != null) ? AppUtils.buildSuccessResponse(AppConstants.COMMENT_ADDED)
-				: AppUtils.buildFailureResponse(AppConstants.COMMENT_NOT_ADDED);
-		return new ResponseEntity<>(response, response.getHttp());
-	}
+        if (!isReply) {
+            updateArticleStats(blogPost, 1);
+        }
 
-//	@Override
-//	public PaginatedResponse<CommentResponse> getCommentsByBlogPostId(String blogPostId) {
-//		BlogPost blogPost = blogPostRepository.findById(blogPostId)
-//				.orElseThrow(() -> new ResourceNotFoundException(AppConstants.BLOG_POST_NOT_FOUND));
-//
-//		Pageable pageable = AppUtils.buildPageableRequest(null, Comment.class); // or pass a pagination object
-//		Page<Comment> page = commentRepository.findByBlogPostId(blogPost.getId(), pageable);
-//
-//		Page<CommentResponse> responsePage = page.map(this::mapToCommentRespons);
-//		return new PaginatedResponse<>(responsePage);
-//	}
+        return ResponseEntity.ok(AppUtils.buildSuccessResponse(AppConstants.COMMENT_ADDED));
+    }
 
-	@Override
-	public ResponseEntity<List<CommentResponse>> getCommentsByBlogPostId(String blogPostId) {
-		// Fetch blog post
-		BlogPost blogPost = blogPostRepository.findByIdAndIsDeletedFalse(blogPostId)
-				.orElseThrow(() -> new ResourceNotFoundException(AppConstants.BLOG_POST_NOT_FOUND));
+    @Override
+    public ResponseEntity<List<CommentResponse>> getCommentsByBlogPostId(String blogPostId) {
+        BlogPost blogPost = getBlogPost(blogPostId);
 
-		// Fetch all active comments for this blog post, latest first
-		List<Comment> comments = commentRepository
-				.findByBlogPostIdAndIsDeletedFalseOrderByCreatedDateDesc(blogPost.getId());
+        List<Comment> comments = commentRepository
+                .findByBlogPostIdAndIsDeletedFalseOrderByCreatedDateDesc(blogPost.getId());
 
-		// Map to CommentResponse DTO
-		return ResponseEntity.ok(comments.stream().map(this::mapToCommentRespons).toList());
-	}
+        List<CommentResponse> response = comments.stream()
+                .map(this::mapToCommentRespons)
+                .collect(Collectors.toList());
 
-	@Override
-	public ResponseEntity<ApiResponse> deleteComment(String commentId) {
-		Comment comment = findByIdCommentId(commentId);
+        return ResponseEntity.ok(response);
+    }
 
-		comment.setIsActive(false);
-		comment.setIsDeleted(true);
+    @Override
+    public ResponseEntity<ApiResponse> deleteComment(String commentId) {
+        Comment comment = getComment(commentId);
+        User currentUser = getCurrentUserEntity();
+        verifyOwnership(comment.getUser(), currentUser, AppConstants.COMMENT_DELETE_FORBIDDEN);
 
-		Comment saved = commentRepository.save(comment);
+        softDeleteCommentAndReplies(comment);
+        updateArticleStats(comment.getBlogPost(), -1);
 
-		BlogPost blogPost = comment.getBlogPost();
-		if (blogPost.getStats() != null && blogPost.getStats().getComments() > 0) {
-			blogPost.getStats().setComments(blogPost.getStats().getComments() - 1);
-			blogPostRepository.save(blogPost); // persist updated stats
-		}
-		ApiResponse response = (saved != null) ? AppUtils.buildSuccessResponse(AppConstants.COMMENT_DELETED)
-				: AppUtils.buildFailureResponse(AppConstants.COMMENT_NOT_DELETED);
-		return new ResponseEntity<>(response, response.getHttp());
-	}
+        return ResponseEntity.ok(AppUtils.buildSuccessResponse(AppConstants.COMMENT_DELETED));
+    }
 
-	@Override
-	public CommentResponse mapToCommentRespons(Comment comment) {
-		if (comment == null)
-			return null;
+    @Override
+    public ResponseEntity<ApiResponse> likeComment(String commentId, Boolean isLike) {
+        Comment comment = getComment(commentId);
+        User currentUser = getCurrentUserEntity();
 
-		return CommentResponse.builder().id(comment.getId()).name(comment.getName()).email(comment.getEmail())
-				.content(comment.getContent()).createdDate(comment.getCreatedDate()).build();
-	}
+        if (isLike) {
+            comment.getLikedByUsers().add(currentUser);
+        } else {
+            comment.getLikedByUsers().remove(currentUser);
+        }
 
-	private Comment findByIdCommentId(String commentId) {
-		return commentRepository.findByIdAndIsDeletedFalse(commentId)
-				.orElseThrow(() -> new ResourceNotFoundException(AppConstants.COMMENT_NOT_FOUND));
-	}
+        commentRepository.save(comment);
+
+        return ResponseEntity.ok(AppUtils.buildSuccessResponse(
+                isLike ? AppConstants.COMMENT_LIKED : AppConstants.COMMENT_UNLIKED
+        ));
+    }
+
+    @Override
+    public ResponseEntity<ApiResponse> deleteReply(String replyId) {
+        Comment reply = getComment(replyId);
+
+        if (reply.getParentComment() == null) {
+            throw new ResourceNotFoundException(AppConstants.REPLY_NOT_FOUND);
+        }
+
+        User currentUser = getCurrentUserEntity();
+        verifyOwnership(reply.getUser(), currentUser, AppConstants.REPLY_DELETE_FORBIDDEN);
+
+        reply.setIsActive(false);
+        reply.setIsDeleted(true);
+        commentRepository.save(reply);
+
+        // Replies do not affect ArticleStats
+        return ResponseEntity.ok(AppUtils.buildSuccessResponse(AppConstants.REPLY_DELETED));
+    }
+
+    @Override
+    public CommentResponse mapToCommentRespons(Comment comment) {
+        if (comment == null) return null;
+
+        User user = comment.getUser();
+        User currentUser = getCurrentUserEntity();
+
+        boolean isLiked = comment.getLikedByUsers().contains(currentUser);
+
+        List<CommentResponse> replies = comment.getReplies().stream()
+                .filter(c -> !Boolean.TRUE.equals(c.getIsDeleted()))
+                .map(this::mapToCommentRespons)
+                .collect(Collectors.toList());
+
+        return CommentResponse.builder()
+                .id(comment.getId())
+                .name(user.getFirstName() + " " + user.getLastName())
+                .designation(user.getRole() != null ? user.getRole().getRoleName() : "User")
+                .profilePicture(user.getProfilePicture())
+                .content(comment.getContent())
+                .createdDate(comment.getCreatedDate())
+                .likeCount(comment.getLikeCount())
+                .isLike(isLiked)
+                .replies(replies)
+                .build();
+    }
+
+    // ---------------- PRIVATE METHODS ----------------
+
+    private void softDeleteCommentAndReplies(Comment comment) {
+        comment.setIsActive(false);
+        comment.setIsDeleted(true);
+        commentRepository.save(comment);
+
+        comment.getReplies().stream()
+                .filter(c -> !Boolean.TRUE.equals(c.getIsDeleted()))
+                .forEach(this::softDeleteCommentAndReplies);
+    }
+
+    private void updateArticleStats(BlogPost blogPost, int delta) {
+        ArticleStats stats = blogPost.getStats();
+        if (stats == null) {
+            stats = ArticleStats.builder().views(0).likes(0).comments(Math.max(0, delta)).shares(0).build();
+            blogPost.setStats(stats);
+        } else {
+            stats.setComments(Math.max(0, stats.getComments() + delta));
+        }
+        blogPostRepository.save(blogPost);
+    }
+
+    private BlogPost getBlogPost(String blogPostId) {
+        return blogPostRepository.findByIdAndIsDeletedFalse(blogPostId)
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.BLOG_POST_NOT_FOUND));
+    }
+
+    private Comment getComment(String commentId) {
+        return commentRepository.findByIdAndIsDeletedFalse(commentId)
+                .orElseThrow(() -> new ResourceNotFoundException(AppConstants.COMMENT_NOT_FOUND));
+    }
+
+    private void verifyOwnership(User resourceOwner, User currentUser, String message) {
+        if (!resourceOwner.getUserId().equals(currentUser.getUserId())) {
+            throw new ForbiddenException(message);
+        }
+    }
+
+    private User getCurrentUserEntity() {
+        UserResponse currentUserResponse = userService.getCurrectUserFromToken();
+        return userService.getUserByEmailAndIsActive(currentUserResponse.getEmail(), null);
+    }
 }
